--- a/app/asset/css/main.css
+++ b/app/asset/css/main.css
@@ -198,7 +198,7 @@ a.nav:hover{
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
     height: 30px;
-    /*width: 50px;*/
+    width: 50px;
     /*position:relative;*/
     padding-left: 5px;
     margin-top: 5px;
