--- a/app/views/users/manage-post/manage-post.template.html
+++ b/app/views/users/manage-post/manage-post.template.html
@@ -1,10 +1,16 @@
 <script src="/javascripts/FileSaver.js"></script>
+<script src="/javascripts/circle-progress/circle-progress.min.js"></script>
 <div class="container-fluid">
 	<div id="download-progress-bar-container" style="margin-bottom: 10px; margin-top: 20px; margin-left: 0px; display: none">
 		<div class="container" style="padding-left: 0px;">
-			<div class="progress">
-				<div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%" id="download-progress-bar">
-					70%
+			<div class="col-lg-2 col-md-2 col-xs-12 col-sm-2">
+				<div id="circle-progress"></div>
+			</div>
+			<div class="col-lg-10 col-md-10 col-xs-12 col-sm-10">
+				<div class="progress">
+					<div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%" id="download-progress-bar">
+						70%
+					</div>
 				</div>
 			</div>
 		</div>
