--- a/app/asset/css/main.css
+++ b/app/asset/css/main.css
@@ -33,13 +33,13 @@ body {
     color: rgb(141,49,36);
 }
 
-.select-box{
+/*.select-box{
     padding: 5px;
     margin: 5px;
     border-radius: 4px;
     width: 300px;
 }
-
+*/
 .select-date{
     border-radius: 4px;
 }
