--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -356,7 +356,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="contain-fluid" ng-controller="GoogleMapController" ng-init="data.fViTriToaDo='dms'" style="margin-top: 10px;">
+				<div class="container-fluid" ng-controller="GoogleMapController" ng-init="data.fViTriToaDo='dms'" style="margin-top: 10px;">
 					<div class="row">
 						<div class="col-sm-5">
 							<label>24. {{"ani.viTriToaDo" | translate }}: </label>
