--- a/app/views/users/add-paleontological-form.template.html
+++ b/app/views/users/add-paleontological-form.template.html
@@ -346,7 +346,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-fluid" ng-controller="GoogleMapController" ng-init="data.fViTriToaDo='dms'" style="margin-top: 10px;">
+			<div class="row" ng-controller="GoogleMapController" ng-init="data.fViTriToaDo='dms'" style="margin-top: 10px;">
 				<div class="row">
 					<div class="col-sm-5">
 						<label>24. {{"pal.viTriToaDo" | translate }}: </label>
