--- a/app/views/users/edit/edit-geological-form.template.html
+++ b/app/views/users/edit/edit-geological-form.template.html
@@ -308,7 +308,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="contain-fluid" ng-controller="GoogleMapController" style="margin-top: 10px;">
+			<div class="row" ng-controller="GoogleMapController" style="margin-top: 10px;">
                 <div class="row">
                     <div class="col-sm-5">
                         <label>24. {{"geo.viTriToaDo" | translate }}: </label>
