--- a/app/views/users/add-geological-form.template.html
+++ b/app/views/users/add-geological-form.template.html
@@ -287,7 +287,7 @@
                     </div>
                 </div>
             </div>
-            <div class="contain-fluid" ng-controller="GoogleMapController" ng-init="data.fViTriToaDo='dms'" style="margin-top: 10px;">
+            <div class="row" ng-controller="GoogleMapController" ng-init="data.fViTriToaDo='dms'" style="margin-top: 10px;">
                 <div class="row">
                     <div class="col-sm-5">
                         <label>24. {{"geo.viTriToaDo" | translate }}: </label>
