--- a/app/views/users/edit/edit-animal-form.template.html
+++ b/app/views/users/edit/edit-animal-form.template.html
@@ -373,7 +373,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="contain-fluid" ng-controller="GoogleMapController" style="margin-top: 10px;">
+			<div class="row" ng-controller="GoogleMapController" style="margin-top: 10px;">
 				<div class="row">
 					<div class="col-sm-5">
 						<label>24. {{"ani.viTriToaDo" | translate }}: </label>
