--- a/app/views/users/edit/edit-paleontological-form.template.html
+++ b/app/views/users/edit/edit-paleontological-form.template.html
@@ -370,7 +370,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container-fluid" ng-controller="GoogleMapController" style="margin-top: 10px;">
+			<div class="row" ng-controller="GoogleMapController" style="margin-top: 10px;">
 				<div class="row">
 					<div class="col-sm-5">
 						<label>24. {{"pal.viTriToaDo" | translate }}: </label>
