fix init unitdefault

--- a/app/views/users/add-geological-form.template.html
+++ b/app/views/users/add-geological-form.template.html
@@ -141,7 +141,7 @@
                             <span>{{"geo.chieuRong" | translate }}: </span><br>
                             <span class="box">
     					      <input type="text" title="{{tooltips['chieuRong']}}" name="chieuRong" ng-model="data.chieuRong" class="datatext" id="datatext">
-    					      <select class="contentselect" ng-model="data.donVi_chieuRong" ng-model="data.chieuCao" name="donVi_chieuRong">
+    					      <select class="contentselect" ng-model="data.donVi_chieuRong" name="donVi_chieuRong">
     					          <option value="mm">mm</option>
     					          <option value="cm">cm</option>
     					          <option value="m">m</option>
