--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -554,12 +554,12 @@
 					<div class="container-fluid">
 						<div class="row">
 							<div class="col-sm-4">
-								{{"ani.hinhAnhDinhKem" | translate }}:
+								{{"ani.hinhAnhDinhKem" | translate }}:<br>
 								<input type="file" multiple id="hinhAnhDinhKem" ng-model="data.hinhAnhDinhKem" name="hinhAnhDinhKem" accept="image/*" max-file-size="5" class="inputfile" data-multiple-caption="{count} file is selected">
 								<label for="hinhAnhDinhKem" title="{{tooltips['hinhAnhDinhKem']}}"><span>{{"customfile.nofilechose" | translate }}</span><strong>{{"customfile.open" | translate }}</strong></label>
 							</div>
 							<div class="col-sm-4">
-								{{"ani.dinhKemXuLyCheTac" | translate }}:
+								{{"ani.dinhKemXuLyCheTac" | translate }}:<br>
 								<input type="file" max-file-size="100" multiple ng-model="data.dinhKemXuLyCheTac" id="dinhKemXuLyCheTac" accept=".docx, .doc, .pdf" name="dinhKemXuLyCheTac" class="inputfile" data-multiple-caption="{count} file is selected">
 								<label for="dinhKemXuLyCheTac" title="{{tooltips['dinhKemXuLyCheTac']}}"><span>{{"customfile.nofilechose" | translate }}</span><strong>{{"customfile.open" | translate }}</strong></label>
 							</div>
@@ -595,7 +595,7 @@
 								<input type="text" ng-model="data.coQuanXuLy" title="{{tooltips['coQuanXuLy']}}" name="coQuanXuLy" class="input-form form-control" id="coQuanXuLy">
 							</div>
 							<div class="col-sm-4">
-								{{"ani.anhMauSauCheTac" | translate }}:
+								{{"ani.anhMauSauCheTac" | translate }}:<br>
 								<input type="file" id="anhMauSauCheTac" multiple ng-model="data.anhMauSauCheTac" name="anhMauSauCheTac" class="inputfile" data-multiple-caption="{count} file is selected" accept="image/*" max-file-size="5">
 								<label for="anhMauSauCheTac" title="{{tooltips['anhMauSauCheTac']}}"><span>{{"customfile.nofilechose" | translate }}</span><strong>{{"customfile.open" | translate }}</strong></label>
 							</div>
@@ -782,7 +782,7 @@
 						<input type="text" ng-model="data.nguoiLapPhieuMauVat" title="{{tooltips['nguoiLapPhieuMauVat']}}" name="nguoiLapPhieuMauVat" class="input-form form-control">
 					</div>
 					<div class="col-sm-4">
-						<label>62. {{"ani.giayPhepNhapMau" | translate }} </label>
+						<label>62. {{"ani.giayPhepNhapMau" | translate }} </label><br>
 						<input type="file" max-file-size="100" multiple id="giayPhepNhapMau" ng-model="data.giayPhepNhapMau" name="giayPhepNhapMau" class="inputfile" data-multiple-caption="{count} file is selected" accept="image/*, .pdf">
 						<label for="giayPhepNhapMau" title="{{tooltips['giayPhepNhapMau']}}"><span>{{"customfile.nofilechose" | translate }}</span><strong>{{"customfile.open" | translate }}</strong></label>
 					</div>
@@ -793,7 +793,7 @@
 						<input type="text" ng-model="data.nguoiNhapVaoPhanMem" title="{{tooltips['nguoiNhapVaoPhanMem']}}" name="nguoiNhapVaoPhanMem" class="input-form form-control">
 					</div>
 					<div class="col-sm-4">
-						<label>63. {{"ani.hoSoNhapMauVatDiKem" | translate }} </label>
+						<label>63. {{"ani.hoSoNhapMauVatDiKem" | translate }} </label><br>
 						<input type="file" max-file-size="100" multiple ng-model="data.hoSoNhapMauVatDiKem" id="hoSoNhapMauVatDiKem" name="hoSoNhapMauVatDiKem" class="inputfile" data-multiple-caption="{count} file is selected" accept=".doc, .docx, .pdf">
 						<label for="hoSoNhapMauVatDiKem" title="{{tooltips['hoSoNhapMauVatDiKem']}}"><span>{{"customfile.nofilechose" | translate }}</span><strong>{{"customfile.open" | translate }}</strong></label>
 					</div>
