--- a/app/views/users/add-paleontological-form.template.html
+++ b/app/views/users/add-paleontological-form.template.html
@@ -508,7 +508,7 @@
 					<input type="text" title="{{tooltips['videoStr']}}" name="videoStr" ng-model="data.videoStr" class="input-form form-control">
 				</div>
 				<div class="col-sm-4">
-					<label>43. {{"pal.videoFile" | translate }}:</label>
+					<label>43. {{"pal.videoFile" | translate }}:</label><br>
 					<input type="file" max-file-size="100" multiple accept="video/*" name ="videoFile" ng-model="data.videoFile" id="videoFile" class="inputfile customfile" data-multiple-caption="{count} file is selected">
 					<label for="videoFile" title="{{tooltips['videoFile']}}"><span>{{"customfile.nofilechose" | translate }}</span><strong>{{"customfile.open" | translate }}</strong></label>
 				</div>
@@ -520,12 +520,12 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-sm-4">
-							{{"pal.hinhAnhDinhKem" | translate }}:
+							{{"pal.hinhAnhDinhKem" | translate }}:<br>
 							<input type="file" multiple id="hinhAnhDinhKem" ng-model="data.hinhAnhDinhKem" name="hinhAnhDinhKem" accept="image/*" max-file-size="5" class="inputfile customfile" data-multiple-caption="{count} file is selected">
 							<label for="hinhAnhDinhKem" title="{{tooltips['hinhAnhDinhKem']}}"><span>{{"customfile.nofilechose" | translate }}</span><strong>{{"customfile.open" | translate }}</strong></label>
 						</div>
 						<div class="col-sm-4">
-							{{"pal.dinhKemXuLyCheTac" | translate }}:
+							{{"pal.dinhKemXuLyCheTac" | translate }}:<br>
 							<input type="file" multiple ng-model="data.dinhKemXuLyCheTac" id="dinhKemXuLyCheTac" accept=".docx, .doc, .pdf" name="dinhKemXuLyCheTac" max-file-size="10" class="inputfile customfile" data-multiple-caption="{count} file is selected">
 							<label for="dinhKemXuLyCheTac" title="{{tooltips['dinhKemXuLyCheTac']}}"><span>{{"customfile.nofilechose" | translate }}</span><strong>{{"customfile.open" | translate }}</strong></label>
 						</div>
@@ -561,7 +561,7 @@
 							<input type="text" title="{{tooltips['coQuanXuLy']}}" name="coQuanXuLy" ng-model="data.coQuanXuLy" id="coQuanXuLy" class="input-form form-control">
 						</div>
 						<div class="col-sm-4">
-							{{"pal.anhMauSauCheTac" | translate }}:
+							{{"pal.anhMauSauCheTac" | translate }}:<br>
 							<input type="file" id="anhMauSauCheTac" multiple ng-model="data.anhMauSauCheTac" name="anhMauSauCheTac" class="inputfile customfile" data-multiple-caption="{count} file is selected" accept="image/*" max-file-size="5">
 							<label for="anhMauSauCheTac" title="{{tooltips['anhMauSauCheTac']}}"><span>{{"customfile.nofilechose" | translate }}</span><strong>{{"customfile.open" | translate }}</strong></label>
 						</div>
@@ -590,7 +590,7 @@
 							<input type="text" title="{{tooltips['congBoQuocTe']}}" name="congBoQuocTe" ng-model="data.congBoQuocTe" class="input-form form-control">
 						</div>
 						<div class="col-sm-3">
-							{{"pal.dinhKemTrinhTuDNA" | translate }}
+							{{"pal.dinhKemTrinhTuDNA" | translate }}<br>
 							<input type="file" multiple ng-model="data.dinhKemTrinhTuDNA" id="dinhKemTrinhTuDNA" name="dinhKemTrinhTuDNA" accept=".doc, .docx, .pdf" max-file-size="10" class="inputfile customfile" data-multiple-caption="{count} file is selected">
 							<label for="dinhKemTrinhTuDNA" title="{{tooltips['dinhKemTrinhTuDNA']}}"><span>{{"customfile.nofilechose" | translate }}</span><strong>{{"customfile.open" | translate }}</strong></label>
 						</div>
@@ -758,7 +758,7 @@
 					<input type="text" title="{{tooltips['nguoiNhapVaoPhanMem']}}" name="nguoiNhapVaoPhanMem" ng-model="data.nguoiNhapVaoPhanMem" class="input-form form-control">
 				</div>
 				<div class="col-sm-4">
-					<label>61. {{"pal.hoSoNhapMauVatDiKem" | translate }}</label>
+					<label>61. {{"pal.hoSoNhapMauVatDiKem" | translate }}</label><br>
 					<input type="file" max-file-size="100" multiple ng-model="data.hoSoNhapMauVatDiKem" id="hoSoNhapMauVatDiKem" name="hoSoNhapMauVatDiKem" class="inputfile customfile" data-multiple-caption="{count} file is selected" accept=".doc, .docx, .pdf">
 					<label for="hoSoNhapMauVatDiKem" title="{{tooltips['hoSoNhapMauVatDiKem']}}"><span>{{"customfile.nofilechose" | translate }}</span><strong>{{"customfile.open" | translate }}</strong></label>
 				</div>
