--- a/app/views/users/edit/edit-paleontological-form.template.html
+++ b/app/views/users/edit/edit-paleontological-form.template.html
@@ -602,7 +602,7 @@
 					<input type="text" title="{{tooltips['videoStr']}}" name="videoStr" ng-model="data.videoStr" class="input-form form-control">
 				</div>
 				<div class="col-sm-4">
-					<label>43. {{"pal.videoFile" | translate }}:</label>
+					<label>43. {{"pal.videoFile" | translate }}:</label><br>
 					<input type="file" max-file-size="100" multiple accept="video/*" name ="videoFile" ng-model="data.videoFile" id="videoFile" class="inputfile customfile" data-multiple-caption="{count} file is selected">
 					<label for="videoFile" title="{{tooltips['videoFile']}}"><span>{{"customfile.nofilechose" | translate }}</span><strong>{{"customfile.open" | translate }}</strong></label>
 					<ul id="ul_videoFile" class="list-group">
@@ -621,7 +621,7 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-sm-4">
-							{{"pal.hinhAnhDinhKem" | translate }}:
+							{{"pal.hinhAnhDinhKem" | translate }}:<br>
 							<input type="file" multiple id="hinhAnhDinhKem" ng-model="data.hinhAnhDinhKem" name="hinhAnhDinhKem" accept="image/*" max-file-size="5" class="inputfile customfile" data-multiple-caption="{count} file is selected">
 							<label for="hinhAnhDinhKem" title="{{tooltips['hinhAnhDinhKem']}}"><span>{{"customfile.nofilechose" | translate }}</span><strong>{{"customfile.open" | translate }}</strong></label>
 							<ul id="ul_hinhAnhDinhKem" class="list-group">
@@ -633,7 +633,7 @@
 		                    </ul>
 						</div>
 						<div class="col-sm-4">
-							{{"pal.dinhKemXuLyCheTac" | translate }}:
+							{{"pal.dinhKemXuLyCheTac" | translate }}:<br>
 							<input type="file" max-file-size="100" multiple ng-model="data.dinhKemXuLyCheTac" id="dinhKemXuLyCheTac" accept=".docx, .doc, .pdf" name="dinhKemXuLyCheTac" class="inputfile customfile" data-multiple-caption="{count} file is selected">
 							<label for="dinhKemXuLyCheTac" title="{{tooltips['dinhKemXuLyCheTac']}}"><span>{{"customfile.nofilechose" | translate }}</span><strong>{{"customfile.open" | translate }}</strong></label>
 							<ul id="ul_dinhKemXuLyCheTac" class="list-group">
@@ -676,7 +676,7 @@
 							<input type="text" title="{{tooltips['coQuanXuLy']}}" name="coQuanXuLy" ng-model="data.coQuanXuLy" id="coQuanXuLy" class="input-form form-control">
 						</div>
 						<div class="col-sm-4">
-							{{"pal.anhMauSauCheTac" | translate }}:
+							{{"pal.anhMauSauCheTac" | translate }}:<br>
 							<input type="file" id="anhMauSauCheTac" multiple ng-model="data.anhMauSauCheTac" name="anhMauSauCheTac" class="inputfile customfile" data-multiple-caption="{count} file is selected" accept="image/*" max-file-size="5">
 							<label for="anhMauSauCheTac" title="{{tooltips['anhMauSauCheTac']}}"><span>{{"customfile.nofilechose" | translate }}</span><strong>{{"customfile.open" | translate }}</strong></label>
 							<ul id="ul_anhMauSauCheTac" class="list-group">
@@ -922,7 +922,7 @@
 					<input type="text" title="{{tooltips['nguoiNhapVaoPhanMem']}}" name="nguoiNhapVaoPhanMem" ng-model="data.nguoiNhapVaoPhanMem" class="input-form form-control">
 				</div>
 				<div class="col-sm-4">
-					<label>61. {{"pal.hoSoNhapMauVatDiKem" | translate }} </label>
+					<label>61. {{"pal.hoSoNhapMauVatDiKem" | translate }} </label><br>
 					<input type="file" max-file-size="100" multiple ng-model="data.hoSoNhapMauVatDiKem" id="hoSoNhapMauVatDiKem" name="hoSoNhapMauVatDiKem" class="inputfile customfile" data-multiple-caption="{count} file is selected" accept=".doc, .docx, .pdf">
 					<label for="hoSoNhapMauVatDiKem" title="{{tooltips['hoSoNhapMauVatDiKem']}}"><span>{{"customfile.nofilechose" | translate }}</span><strong>{{"customfile.open" | translate }}</strong></label>
 					<ul id="ul_hoSoNhapMauVatDiKem" class="list-group">
