fix upload file

--- a/app/views/users/add-geological-form.template.html
+++ b/app/views/users/add-geological-form.template.html
@@ -1,6 +1,6 @@
 <form id="form-content" name="FormContent" ng-submit="addPost(FormContent, form)" novalidate>
     <input type="hidden" name="randomStr" value="{{randomStr}}" id="randomStr">
-    <input type="hidden" name="sample" value="dong-vat" id="sample">
+    <input type="hidden" name="sample" value="dia-chat" id="sample">
     <center>
         <h3>Thêm mẫu dữ liệu địa chất > Đề tài: {{maDeTai}}</h3>
     </center>
