--- a/app/views/users/add-paleontological-form.template.html
+++ b/app/views/users/add-paleontological-form.template.html
@@ -1,6 +1,6 @@
 <form id="form-content" name="FormContent" ng-submit="addPost(FormContent, form)" novalidate>
 	<input type="hidden" name="randomStr" value="{{randomStr}}" id="randomStr">
-	<input type="hidden" name="sample" value="dong-vat" id="sample">
+	<input type="hidden" name="sample" value="co-sinh" id="sample">
 	<center><h3>Thêm mẫu dữ liệu cổ sinh > Đề tài: {{maDeTai}}</h3></center>
 	<div class="container-fluid">
 		<ul class="nav nav-tabs group tabs">
