--- a/app/views/users/edit/edit-geological-form.template.html
+++ b/app/views/users/edit/edit-geological-form.template.html
@@ -1,7 +1,7 @@
 <form id="form-content" name="FormData">
 	<input type="text" name="id" id="obId" style="display: none;" ng-model="data.id">
     <input type="hidden" name="randomStr" value="{{randomStr}}" id="randomStr">
-    <input type="hidden" name="sample" value="dong-vat" id="sample">
+    <input type="hidden" name="sample" value="dia-chat" id="sample">
 	<center>
 		<h3>Chỉnh sửa mẫu dữ liệu địa chất > Đề tài: {{maDeTai}}</h3>
 	</center>
