--- a/app/views/users/edit/edit-vegetable-form.template.html
+++ b/app/views/users/edit/edit-vegetable-form.template.html
@@ -1,7 +1,7 @@
 <form id="form-content">
 	<input type="text" name="id" id="obId" style="display: none;" ng-model="data.id">
 	<input type="hidden" name="randomStr" value="{{randomStr}}" id="randomStr">
-	<input type="hidden" name="sample" value="dong-vat" id="sample">
+	<input type="hidden" name="sample" value="thuc-vat" id="sample">
 	<center><h3>Chỉnh sửa mẫu dữ liệu thực vật > Đề tài: {{maDeTai}}</h3></center>
 	<div class="container-fluid">
 		<ul class="nav nav-tabs group tabs">
