--- a/templates/header.html
+++ b/templates/header.html
@@ -52,11 +52,11 @@
 			padding-bottom: 5px;
 			padding-left: 5px;
 		}
-		.tnr, .ptitle, .tnri, .tnrlb {
+		.tnr, .ptitle, .tnri, .tnrlb, .ite-bold, .ite-italic {
 			font-family: "Times New Roman";
 			font-size: 16px;
 		}
-		.lb, .ptitle, .tnrlb {
+		.lb, .ptitle, .tnrlb, .ite-bold {
 			font-weight: bold;
 		}
 		.ct, .ptitle, .tnrlb {
@@ -68,11 +68,16 @@
 		.upper, .ptitle {
 			text-transform: uppercase;
 		}
-		.i, .tnri {
+		.i, .tnri, .ite-italic {
 			font-style: italic;
 		}
 		.ptitle{
 			margin-bottom: 20px;
+		}
+		.ite-underline{
+			font-family: "Times New Roman";
+			font-size: 16px;
+			text-decoration: underline;
 		}
 	</style>
 </head>
