disable export XLSX + fix column size in exported DOCX, PDF

--- a/templates/header.html
+++ b/templates/header.html
@@ -38,19 +38,27 @@
 			margin: 20px 20px 20px 20px;
 			width: 90%;
 		}
-		th {
-			width: 25%;
-		}
 		td {
-			width: 25%;
 			padding-top: 5px;
 			padding-bottom: 5px;
 			padding-left: 5px;
 		}
-		.td {
+		.td, .td-stt, .td-field, .td-value, .td-note {
 			padding-top: 5px;
 			padding-bottom: 5px;
 			padding-left: 5px;
+		}
+		.td-stt {
+			width: 10%;
+		}
+		.td-field {
+			width: 20%;
+		}
+		.td-value {
+			width: 40%;
+		}
+		.td-note {
+			width: 20%;
 		}
 		.tnr, .ptitle, .tnri, .tnrlb, .ite-bold, .ite-italic {
 			font-family: "Times New Roman";
