commit trước thiếu file

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -19,7 +19,7 @@
 							<span class="text-danger"><%= message %></span>
 						<% } %>
 						<!-- <input type="submit" name="login" id="btnSubmit" class="login loginmodal-submit" value="Đăng ký"> -->
-						<button class="g-recaptcha login loginmodal-submit" id="btnSubmit" data-sitekey="<%= sitekey %>" data-callback='onSubmit'>Đăng ký</button>
+						<button class="g-recaptcha login loginmodal-submit" data-sitekey="<%= sitekey %>" data-callback='onSubmit' style="width:100%">Đăng ký</button>
 					</form>
 					<div class="login-help">
 						<a href="/auth/login">Đăng nhập</a>
