--- a/views/display.ejs
+++ b/views/display.ejs
@@ -292,7 +292,7 @@
 	  }).addTo(mymap);
 
 		var marker = L.marker([latitude, longitude]).addTo(mymap);
-		<% if (coordinationArr) { %>
+		<% if (typeof(coordinationArr) != 'undefined') { %>
 			var c = <%- JSON.stringify(coordinationArr) %>
 			for(var i = 0; i < c.length; i++) {
 				var marker = L.marker(c[i], {title: i, riseOnHover: true}).addTo(mymap);
