--- a/app/views/users/add-geological-form.template.html
+++ b/app/views/users/add-geological-form.template.html
@@ -128,7 +128,7 @@
                     <div class="row">
                         <div class="col-sm-2">
                             <span>{{"geo.chieuCao" | translate }}: </span><br>
-                            <span class="box">
+                            <span>
     					      <input type="text" title="{{tooltips['chieuCao']}}" name="chieuCao" ng-model="data.chieuCao" class="datatext" id="datatext">
     					      <select class="contentselect" ng-model="data.donVi_chieuCao" name="donVi_chieuCao">
     					          <option value="mm">mm</option>
@@ -139,7 +139,7 @@
                         </div>
                         <div class="col-sm-2">
                             <span>{{"geo.chieuRong" | translate }}: </span><br>
-                            <span class="box">
+                            <span>
     					      <input type="text" title="{{tooltips['chieuRong']}}" name="chieuRong" ng-model="data.chieuRong" class="datatext" id="datatext">
     					      <select class="contentselect" ng-model="data.donVi_chieuRong" name="donVi_chieuRong">
     					          <option value="mm">mm</option>
@@ -151,7 +151,7 @@
 
                         <div class="col-sm-2">
                             <span>{{"geo.chieuDai" | translate }}: </span><br>
-                            <span class="box">
+                            <span>
     				        <input type="text" title="{{tooltips['chieuDai']}}" name="chieuDai" ng-model="data.chieuDai" class="datatext" id="datatext">
     					      <select class="contentselect" ng-model="data.donVi_chieuDai" name="donVi_chieuDai">
     					          <option value="mm">mm</option>
@@ -164,7 +164,7 @@
                     <div class="row">
                         <div class="col-sm-2">
                             <span>{{"geo.trongLuong" | translate }}: </span><br>
-                            <span class="box">
+                            <span>
     					    <input type="text" title="{{tooltips['trongLuong']}}" name="trongLuong" ng-model="data.trongLuong" class="datatext" id="datatext">
     					      <select class="contentselect" ng-model="data.donVi_trongLuong" name="donVi_trongLuong">
     								<option value="mg">mg</option>
@@ -175,7 +175,7 @@
                         </div>
                         <div class="col-sm-2">
                             <span>{{"geo.theTich" | translate }}: </span><br>
-                            <span class="box">
+                            <span>
     					      <input type="text" title="{{tooltips['theTich']}}" name="theTich" class="datatext" ng-model="data.theTich" id="datatext">
     					      <select class="contentselect" ng-model="data.donVi_theTich" name="donVi_theTich">
     					          <option value="ml">ml</option>
