--- a/views/display.ejs
+++ b/views/display.ejs
@@ -61,7 +61,7 @@
 									preStr += '<video width="160" height="120" controls> <source src="/content/download' + sp + '/' + curElement + '"></video>'
 									break;
 								case 'image':
-									preStr += '<a href="/content/download' + sp + '/' + curElement + '">' + '<img class="img-responsive" width="160" src="' + sp + '/' + curElement + '">' + '</a><br/>\n';
+									preStr += '<a href="/content/download' + sp + '/' + curElement + '">' + '<img onerror="this.onerror=null;this.src=\'/img/image-not-found.png\';" class="img-responsive" width="160" src="' + sp + '/' + curElement + '">' + '</a><br/>\n';
 									break;
 								default:
 									preStr += '<a href="/content/download' + sp + '/' + curElement + '">' + curElement.substring(curElement.lastIndexOf('_+_') + '_+_'.length) + '</a><br/>\n';
